# allpointsburnes

./: .gitignore  .pnp.js  Dockerfile  README.md  docker-compose.yml  gatsby-config.js  gatsby-node.js  netlify.toml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: test-deploy.yml
apps/roundabout-intersections/: README.md  config.py  geometry_utils.py  intersection_detection.py  landuse_analysis.py  main.py  overpass_queries.py  package.json  pyproject.toml  traffic_signal_filter.py  two_lane_filter.py
apps/roundabout-intersections/roundabout_intersections/: __init__.py
apps/site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.js
apps/site/ci/: deploy.sh
apps/site/public/: roundabout-intersections.geojson
apps/site/src/: consts.ts  types.ts
apps/site/src/components/: BaseHead.astro  Container.astro  ContentItem.astro  DividerHorizontal.astro  Footer.astro  FormattedDate.astro  Header.astro  Hero.astro  Logo.astro  Pagination.astro  RoundaboutMap.astro  Row.astro  (+3 more)
src/: html.js  styles.css
src/components/: CardsSection.js  Container.js  ContentContainer.js  Footer.js  Header.js  HomeBanner.js  Layout.js  PostCard.js  ProjectCard.js  Resume.js  ResumeCard.js  Section.js
src/components/elements/: Box.js  Button.js  Download.js  HeaderLink.js  PageLink.js
src/components/graphics/: Icon.js  MiniLogo.js  SvgLogo.js
src/layouts/: index.js
src/pages/: 404.js  index.js
src/pages/datasets/: projects.json  resume.json
src/pages/posts/: index.js
src/templates/: posts.js
src/utils/: formatDate.js  typography.js
(+27 files in other folders)
