[project]
name = "roundabout-intersections"
version = "0.1.0"
description = "OSM intersection and landuse analysis for Phoenix metro area"
requires-python = ">=3.10"
dependencies = [
    "overpy>=0.6",
    "shapely>=2.0",
    "geopandas>=0.14",
    "osmnx>=1.9",
    "pyproj>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["roundabout_intersections"]
